# MutsukiBotTemplate

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: platform-compat.yml  release-set.yml
config/: qqbot.example.toml  secret.template.toml  template.toml
crates/example-bot/: Cargo.toml
crates/example-bot/src/: agent_tool.rs  lib.rs  main.rs  mock_transport.rs  plugin.rs
crates/example-bot/src/commands/: echo.rs  mod.rs  ping.rs
crates/example-bot/tests/: agent_mock_e2e.rs  assembly_config.rs  qqbot_config_e2e.rs  qqbot_real_smoke.rs
crates/example-bot/tests/support/: mock_transport.rs
crates/mutsuki-bot/: Cargo.toml
crates/mutsuki-bot/src/: distribution.rs  lib.rs  main.rs  web_console.rs
crates/mutsuki-bot/tests/: abi_plugin_assembly.rs  agentkit_issue3_e2e.rs  assembly_config.rs  distribution_config.rs  qqbot_config_e2e.rs  qqbot_real_smoke.rs  standalone_console_process_smoke.rs  standalone_quic_smoke.rs  unix_product_smoke.rs  web_console_smoke.rs
crates/mutsuki-bot/tests/support/: mod.rs
deploy/distribution/: controller-worker.toml  ha-three-voters-worker.toml  single-node.toml  task-policies.toml
docs/: distributed-acceptance.md  distributed-deployment.md  lilia-theme-extraction-plan.md  release-sets.md  repository-boundaries.md  standalone-console.md
releases/: mutsuki-0.1-alpha-1.toml  mutsuki-0.1-alpha-2.toml  mutsuki-0.1-alpha-3.toml
scripts/: release_set.py  test_release_set.py
skills/bot-assembly/: SKILL.md
skills/business-runner/: SKILL.md
skills/capability-boundaries/: SKILL.md
skills/integration-testing/: SKILL.md
skills/remote-dependencies/: SKILL.md
