[workspace]
members = ["crates/mutsuki-bot"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
mutsuki-distributed-contracts = { git = "https://github.com/sena-nana/MutsukiDistributedHost.git", rev = "ba8c7150195312377ca3d6a30d22f3468c9ced8c" }
mutsuki-distributed-control-client = { git = "https://github.com/sena-nana/MutsukiDistributedHost.git", rev = "ba8c7150195312377ca3d6a30d22f3468c9ced8c" }
mutsuki-service-config = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "5abf3a3f4a455a365a18f4883b81e959994d34f2" }
mutsuki-service-runtime = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "5abf3a3f4a455a365a18f4883b81e959994d34f2", default-features = false }
mutsuki-service-control = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "5abf3a3f4a455a365a18f4883b81e959994d34f2" }
mutsuki-service-ipc = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "5abf3a3f4a455a365a18f4883b81e959994d34f2" }
mutsuki-service-plugin-loader = { git = "https://github.com/sena-nana/MutsukiServiceHost.git", rev = "5abf3a3f4a455a365a18f4883b81e959994d34f2" }
mutsuki-plugin-bot-adapter-qqbot = { git = "https://github.com/sena-nana/MutsukiBotPlugins.git", rev = "09bb313c8a46d0a3d168b21f3888ebf3742a5623" }
mutsuki-plugin-bot-command = { git = "https://github.com/sena-nana/MutsukiBotPlugins.git", rev = "09bb313c8a46d0a3d168b21f3888ebf3742a5623" }
mutsuki-bot-service-host-integration = { git = "https://github.com/sena-nana/MutsukiBotPlugins.git", rev = "09bb313c8a46d0a3d168b21f3888ebf3742a5623" }
mutsuki-bot-web-console = { git = "https://github.com/sena-nana/MutsukiBotPlugins.git", rev = "09bb313c8a46d0a3d168b21f3888ebf3742a5623" }
mutsuki-web-host = { git = "https://github.com/sena-nana/MutsukiWebHost.git", rev = "f77cb0beb637f7f184c020f1c824633509a0d2b6" }
mutsuki-web-protocol = { git = "https://github.com/sena-nana/MutsukiWebHost.git", rev = "f77cb0beb637f7f184c020f1c824633509a0d2b6" }
mutsuki-bot-testkit = { git = "https://github.com/sena-nana/MutsukiBotPlugins.git", rev = "09bb313c8a46d0a3d168b21f3888ebf3742a5623" }
mutsuki-std-plugins = { git = "https://github.com/sena-nana/MutsukiStdPlugins.git", rev = "109e3cdb70f5997559fe09bc84d519cc265c16cd" }
mutsuki-agent-bundle = { git = "https://github.com/sena-nana/MutsukiAgentKit.git", rev = "75d5aa574696922c0fa679ef515491e6e73be441" }
mutsuki-agent-protocol = { git = "https://github.com/sena-nana/MutsukiAgentKit.git", rev = "75d5aa574696922c0fa679ef515491e6e73be441" }
mutsuki-agent-sdk = { git = "https://github.com/sena-nana/MutsukiAgentKit.git", rev = "75d5aa574696922c0fa679ef515491e6e73be441" }
mutsuki-plugin-agent-model-gateway = { git = "https://github.com/sena-nana/MutsukiAgentKit.git", rev = "75d5aa574696922c0fa679ef515491e6e73be441" }
mutsuki-runtime-contracts = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
mutsuki-runtime-sdk = { git = "https://github.com/sena-nana/MutsukiCore.git", rev = "0e07be963aee996283d5ae702e3a8153de1e417b" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tempfile = "3"
toml = "0.8"

[profile.dev]
debug = "line-tables-only"
incremental = true
