[package]
name = "example-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-host.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-bot-protocol.workspace = true
mutsuki-bot-sdk.workspace = true
mutsuki-plugin-bot-adapter-qqbot.workspace = true
mutsuki-plugin-bot-command.workspace = true
mutsuki-plugin-bot-event-router.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
