[package]
name = "example-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
agent-bot = [
    "dep:mutsuki-agent-protocol",
    "dep:mutsuki-agent-sdk",
]

[dependencies]
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-core.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-bot-protocol.workspace = true
mutsuki-bot-sdk.workspace = true
mutsuki-bot-service-host-integration.workspace = true
mutsuki-agent-protocol = { workspace = true, optional = true }
mutsuki-agent-sdk = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
mutsuki-runtime-host.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
mutsuki-plugin-bot-adapter-qqbot.workspace = true
mutsuki-bot-testkit.workspace = true
mutsuki-plugin-bot-command.workspace = true
mutsuki-plugin-bot-event-router.workspace = true
mutsuki-agent-bundle.workspace = true
tempfile.workspace = true
