[package]
name = "mutsuki-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-service-config.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-bot-service-host-integration.workspace = true
mutsuki-std-plugins.workspace = true
tokio.workspace = true

[dev-dependencies]
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
mutsuki-plugin-bot-adapter-qqbot.workspace = true
mutsuki-plugin-bot-command.workspace = true
mutsuki-bot-testkit.workspace = true
mutsuki-service-plugin-loader.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
