[package]
name = "mutsuki-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mutsuki-distributed-contracts.workspace = true
mutsuki-distributed-control-client.workspace = true
mutsuki-service-config.workspace = true
mutsuki-service-runtime.workspace = true
mutsuki-bot-service-host-integration.workspace = true
mutsuki-bot-web-console.workspace = true
mutsuki-std-plugins.workspace = true
mutsuki-web-host.workspace = true
mutsuki-web-protocol.workspace = true
thiserror = "2.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
mutsuki-agent-bundle.workspace = true
mutsuki-agent-protocol.workspace = true
mutsuki-agent-sdk.workspace = true
mutsuki-plugin-agent-model-gateway.workspace = true
mutsuki-runtime-contracts.workspace = true
mutsuki-runtime-sdk.workspace = true
mutsuki-service-control.workspace = true
mutsuki-service-ipc.workspace = true
mutsuki-plugin-bot-adapter-qqbot.workspace = true
mutsuki-plugin-bot-command.workspace = true
mutsuki-bot-testkit.workspace = true
mutsuki-service-plugin-loader.workspace = true
sha2.workspace = true
tempfile.workspace = true
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
uuid = { version = "1", features = ["v4"] }
